<resources>
    <string name="app_name">Mini Stockbit App</string>
    <string name="masuk">Masuk</string>
    <string name="login_with_google">Masuk dengan Google</string>
    <string name="login_with_facebook">Masuk dengan Facebook</string>
    <string name="or">Atau</string>
    <string name="password">Password</string>
    <string name="usename">Username or Email</string>
    <string name="forgot_password">Lupa Password</string>
    <string name="login">Login</string>
    <string name="login_with_fingerprint">Masuk dengan Fingerprint</string>
    <string name="ask_create_account">Belum punya akun?</string>
    <string name="register">Daftar sekarang</string>
    <string name="watchlist">Watchlist</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="all_watchlist">All Watchlist</string>
</resources>