<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@color/white"
        tools:context=".ui.login.LoginActivity">

        <TextView
            android:id="@+id/btn_google_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_with_google"
            android:textAllCaps="false"
            android:background="@drawable/bg_button_outline_gray"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:gravity="center"
            android:drawableLeft="@drawable/google_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btn_facebook_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_with_facebook"
            android:textAllCaps="false"
            android:background="@drawable/bg_button_outline_gray"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:gravity="center"
            android:drawableLeft="@drawable/facebook_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_google_login" />

        <View
            android:id="@+id/divider1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/btn_facebook_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/text_or" />

        <TextView
            android:id="@+id/text_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:textColor="@color/light_gray"
            app:layout_constraintTop_toTopOf="@id/divider1"
            app:layout_constraintBottom_toTopOf="@id/divider1"
            app:layout_constraintStart_toEndOf="@id/divider1"
            app:layout_constraintEnd_toStartOf="@id/divider2" />

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/btn_facebook_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_or" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usename"
            android:paddingLeft="8dp"
            android:textSize="15sp"
            android:inputType="text"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@id/text_or" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:paddingLeft="8dp"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:paddingRight="8dp"
            android:drawableRight="@drawable/ic_baseline_visibility_gray"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@id/et_username" />

        <TextView
            android:id="@+id/text_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_password"
            android:textColor="@color/teal_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/square_green_filled"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_forgot_password" />

        <TextView
            android:id="@+id/btn_login_with_fingerprint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_with_fingerprint"
            android:textAllCaps="false"
            android:textColor="@color/teal_700"
            android:background="@drawable/square_green_outline"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/btn_login_with_fingerprint">


            <TextView
                android:id="@+id/text_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask_create_account"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_login_with_fingerprint" />

            <TextView
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textStyle="bold"
                android:textColor="@color/teal_700"
                android:gravity="center"
                android:layout_marginLeft="4dp"
                app:layout_constraintStart_toEndOf="@id/text_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_login_with_fingerprint" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>